--- a/hotel-management-frontend/src/pages/login/login.css
+++ b/hotel-management-frontend/src/pages/login/login.css
@@ -1,5 +1,5 @@
 .pic-bg{
-  background-image: url("/s.jpg");
+  background-image: url("/sigiriya.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
